# job-focus

./: .env.example  .gitignore  DEPLOYMENT.md  LIVE_SYSTEM_CHECKLIST.md  PRODUCTION_DATA_HYGIENE.md  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  requirements-dev.txt  tsconfig.base.json  turbo.json
apps/api/: .env.example  .env.production.example  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260412_0001_normalized_schema.py  20260415_0002_multisource_registry.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/db/: __init__.py  session.py  url.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/repositories/: __init__.py  job_focus.py
apps/api/app/services/: __init__.py  bootstrap_primary_user.py  dev_data.py  repository.py  seeding.py  tracker.py
apps/api/scripts/: __init__.py  bootstrap_primary_user.py  reset_dev_demo_data.py  seed_demo.py  start_api.py
apps/api/tests/: conftest.py  test_api.py  test_bootstrap_primary_user.py  test_database_url.py  test_dev_data.py  test_repository.py  test_sources_api.py  test_start_api.py
apps/worker/: .env.example  .env.production.example  package.json  pyproject.toml
apps/worker/tests/: test_adapters.py  test_bootstrap_pipeline.py  test_browser_assist.py  test_execution_integration.py  test_matching_and_packets.py  test_pipeline.py
apps/worker/worker/: __init__.py  browser_auth_cli.py  config.py  execution.py  main.py  matching.py  packets.py
apps/worker/worker/adapters/: base.py  (+4 more)
(+56 files in other folders)
