[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-focus-api"
version = "0.1.0"
description = "FastAPI service for the Job Focus platform."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15,<2.0",
  "fastapi>=0.115,<1.0",
  "job-focus-shared>=0.1.0",
  "pydantic-settings>=2.6,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "redis>=5.2,<6.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
