[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-focus-worker"
version = "0.1.0"
description = "Scheduled worker for Job Focus ingestion and automation."
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10,<4.0",
  "job-focus-api>=0.1.0",
  "job-focus-shared>=0.1.0",
  "playwright>=1.53,<2.0",
  "pydantic-settings>=2.6,<3.0",
  "redis>=5.2,<6.0",
  "sqlalchemy>=2.0,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*"]
